<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, IRBUActivity!</string>
    <string name="app_name">IRBU</string>
    <string name="txtBajaUTPL">Baja de la UTPL</string>
    <string name="txtSubeUTPL">Sube a la UTPL</string>
    <string name="txtSubeBajaUTPL">Sube y baja de la UTPL</string>
    <string name="txtTituloTipoRecorrido">Seleccionar un tipo de recorrido:</string>
    <string name="txtTituloHora">Seleccionar la hora del recorrido:</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="txtTitutloApp">(Información de Rutas de los Buses de la UTPL)</string>
    <string name="txtMapa">Mapa</string>
    <string name="txtBuscarRuta">Buscar ruta</string>
    <string name="txtBuscarRutaHoraSector">Buscar ruta por hora</string>
    <string name="txtListaRutas">Lista de Rutas</string>
    <string name="txtAyuda">Ayuda</string>

        <!-- Menu -->
	<string name="menu_settings">Settings</string>
	<string name="menu_waypointlist">Waypoints</string>
	<string name="menu_about">About</string>
	<string name="menu_displaytrack">Display track</string>
	<string name="menu_stoptracking">Stop &amp; save</string>
	<string name="menu_newtrack">New track</string>
	<string name="menu_deletetracks">Delete all tracks</string>
	<string name="menu_continue">Continue track</string>
	<string name="menu_save">Save</string>
	<string name="menu_cancel">Cancel</string>
	<string name="menu_export">Export as GPX</string>
	<string name="menu_center_to_gps">Center to GPS</string>
        
	    <string name="tracklogger_gps_disabled">GPS disabled</string>
	    <string name="tracklogger_gps_disabled_hint">GPS is disabled. Do you want to enable it ?</string>
</resources>